fix spacing on phone

--- a/frontend-farmigros/src/app/components/grid/grid.component.scss
+++ b/frontend-farmigros/src/app/components/grid/grid.component.scss
@@ -10,7 +10,7 @@
 .zoom-slider {
   position: fixed;
   z-index: 10;
-  top: 140px;
+  top: 160px;
   right: -32px;
   transform: rotate(-90deg);
 }
@@ -18,7 +18,7 @@
 .camera-button {
   position: fixed;
   z-index: 10;
-  top: 20px;
+  top: 40px;
   right: 5px;
 
 }
